refactor some class, implement file drawer popups

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,17 @@
 	
 	<string name="nav_drawer_open">Open Navigation Drawer</string>
 	<string name="nav_drawer_close">Open Navigation Drawer</string>
+	
+	<!-- File Drawer -->
+	<string name="file_drawer_no_files">Folder does not exist</string>
+	<string name="file_drawer_popup_new_file">New file</string>
+    <string name="file_drawer_popup_new_folder">New folder</string>
+	<string name="file_drawer_popup_rename">Rename</string>
+	<string name="file_drawer_popup_delete">Delete</string>
+	<string name="file_drawer_popup_delete_confirmation">Are you sure?</string>
+	<string name="file_drawer_popup_create">Create</string>
+	<string name="file_drawer_popup_cancel">Cancel</string>
+	<string name="file_drawer_toast_success">Success!</string>
+	<string name="file_drawer_toast_failed">Failed!</string>
+	
 </resources>
