fix bugs, fix crashes, REFACTOR
added ui for new project (doesnt do anything yet), make lists refreshable

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,6 @@
 	<string name="file_drawer_popup_cancel">Cancel</string>
 	
 	<!-- List layout -->
-	<string name="layout_list_bar_loading">Loading...</string>
+	<string name="layout_list_bar_loading">Loading…</string>
 	
 </resources>
