refactor some classes, fix some crashes and bugs

--- a/app/src/main/assets/tm/languages/languages.json
+++ b/app/src/main/assets/tm/languages/languages.json
@@ -5,6 +5,12 @@
             "name": "lua",
             "scopeName": "source.lua",
             "languageConfiguration": "tm/languages/lua/language-configuration.json"
+        },
+		{
+        	"grammar": "tm/languages/json/syntaxes/JSON.tmLanguage.json",
+            "name": "json",
+            "scopeName": "source.json",
+            "languageConfiguration": "tm/languages/json/language-configuration.json"
         }
     ]
 }
